# legged-robot-ros2

./: README.md
scripts/: start_robot.sh
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: bridge.launch.py
src/robot_bringup/src/: bridge_node.cpp
src/robot_control/: package.xml  setup.py
src/robot_control/launch/: inference.launch.py  robot_control.launch.py
src/robot_control/robot_control/: allinone_policy.onnx  finall.onnx  inference_node.py  initial_pose_publisher.py  joy_to_cmd_vel.py  model_0331.onnx  model_0406.onnx  model_0407.onnx  modelt_teacher.onnx  rdk_inference.py
